[package]
name = "test1_bin"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
test1_lib = { path = "../test1_lib" }
# unicode-ident = "1.0"
#serde_derive_internals = { version = "0.28.0", path = "/home/user/src/serde/serde_derive_internals" }
# proc-macro2 = "*"
# quote = {version = "*"}
# syn = "*"
# serde = { version = "1.0.180", features= ["derive"] }
#proc-macro2 = { version = "1.0" }
#proc-macro2 = { version = "1.0.66", path = "/home/user/src/proc-macro2" }
